--- a/BB5.ipynb
+++ b/BB5.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "2430d055-ebb5-43ab-aaa1-ae54c7d1919c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import matplotlib.pyplot as plt\n",
+    "import random\n",
+    "from PIL import Image\n",
     "from tabulate import tabulate"
    ]
   },
@@ -197,10 +198,7 @@
    "id": "ec7b21e8-747f-4234-9cc1-a15f5e3cc431",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import random\n",
-    "from PIL import Image"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -803,7 +801,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -817,7 +815,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
