--- a/Heuristic - Polynomial.ipynb
+++ b/Heuristic - Polynomial.ipynb
@@ -138,11 +138,13 @@
   {
    "cell_type": "markdown",
    "id": "3d575a86-3169-4ee6-a386-52f375f7170f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Polynomial Heuristic\n",
     "\n",
-    "We reason that the time steps at which the head scans cells relatively close to the origin must be polynomial. We care about relatively close cells to the origin because it means that the machine enters the polynomial behavior quickly. That constraint was found to be necessary for the heuristic to pass the tests on the examples and counter-examples we have.\n",
+    "We reason that the sequence of time steps at which the head is at cells that are relatively close to the origin must be polynomial. We care about relatively close cells to the origin because it means that the machine enters the polynomial behavior quickly. That constraint was found to be necessary for the heuristic to pass the tests on the examples and counter-examples we have.\n",
     "\n",
     "Recognising polynomial sequences is not hard: the nth sequence of differences is null."
    ]
