--- a/Heuristic - Exponential Record Times.ipynb
+++ b/Heuristic - Exponential Record Times.ipynb
@@ -112,13 +112,15 @@
     "\n",
     "We reason that the sequence of time steps at which the head breaks a new record in a direction (i.e. discovers a cell that had never been visitided before) must be exponential.\n",
     "\n",
-    "Based on experimentations we conjecture that the sequences of records follows the recurrence equation:\n",
+    "Based on experimentations we conjecture that the sequences of records follow the recurrence equation:\n",
     "\n",
     "$$ r_{n+1} = Ar_{n} + P(n) $$\n",
     "\n",
+    "With $A >= 2$ a natural number and $P$ a polynomial.\n",
+    "\n",
     "In practice $A \\in \\{2,3,4\\}$ and $P$ is of degree $1$.\n",
     "\n",
-    "We also have to consider subsequences of the record sequence, in practice `record_times[::k]` for `k=1,2,3,4,5`."
+    "In practice we have to consider subsequences of the record sequence and the following works: `record_times[::k]` for `k=1,2,3,4,5`."
    ]
   },
   {
@@ -602,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 246,
    "id": "7b19a3a9-103c-46bd-8ca9-e4def1c42735",
    "metadata": {},
    "outputs": [
@@ -617,7 +619,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 72%|████████████████████████████████████▊              | 107/148 [00:29<00:13,  2.99it/s]"
+      "100%|███████████████████████████████████████████████████| 148/148 [00:38<00:00,  3.86it/s]\n"
      ]
     }
    ],
