--- a/Heuristic - Bouncers.ipynb
+++ b/Heuristic - Bouncers.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "convinced-pipeline",
+   "execution_count": 10,
+   "id": "secret-tradition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "modular-indian",
+   "execution_count": 11,
+   "id": "manufactured-conducting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "senior-bathroom",
+   "id": "specific-cloud",
    "metadata": {},
    "source": [
     "# A simple heuristic to detect bouncers"
@@ -34,12 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "english-quantity",
+   "execution_count": 25,
+   "id": "married-information",
    "metadata": {},
    "outputs": [],
    "source": [
-    "TapeExtreme = namedtuple('TapeExtreme', ['side', 'time', 'pos'])\n",
+    "TapeExtreme = namedtuple('TapeExtreme', ['time', 'side', 'pos'])\n",
     "\n",
     "def simulate_and_get_extremes(machine, time_limit = 10000):\n",
     "    \n",
@@ -55,11 +55,11 @@
     "        \n",
     "        if curr_time == 0 or curr_pos <= min_pos:\n",
     "            min_pos = curr_pos\n",
-    "            tape_extremes.append(TapeExtreme(\"left\",curr_time,curr_pos))\n",
+    "            tape_extremes.append(TapeExtreme(curr_time,\"left\",curr_pos))\n",
     "            \n",
     "        if curr_time == 0 or curr_pos >= max_pos:\n",
     "            max_pos = curr_pos\n",
-    "            tape_extremes.append(TapeExtreme(\"right\",curr_time,curr_pos))\n",
+    "            tape_extremes.append(TapeExtreme(curr_time,\"right\",curr_pos))\n",
     "        \n",
     "        curr_state, curr_pos = step(machine, curr_state, curr_pos, tape)\n",
     "       \n",
@@ -70,8 +70,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "expensive-length",
+   "execution_count": 13,
+   "id": "surprised-anniversary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,8 +89,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "gothic-superintendent",
+   "execution_count": 46,
+   "id": "early-parcel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,15 +100,15 @@
     "    \n",
     "    to_return = []\n",
     "    for i in range(2,len(locally_extremes),2):\n",
-    "        to_return.append(abs(locally_extremes[i][2] - locally_extremes[i-1][2]))\n",
+    "        to_return.append(locally_extremes[i-1].pos - locally_extremes[i].pos+1)\n",
     "    \n",
     "    return to_return     "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "threatened-december",
+   "execution_count": 47,
+   "id": "addressed-admission",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,8 +125,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "ranking-symbol",
+   "execution_count": 48,
+   "id": "convertible-naples",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,8 +139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "lesser-angola",
+   "execution_count": 49,
+   "id": "radical-painting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,9 +148,8 @@
     "    extremes = simulate_and_get_extremes(machine)\n",
     "    local_extremes = get_local_extremes(extremes)\n",
     "    successive_tape_sizes = get_successive_tape_sizes(local_extremes)\n",
-    "    \n",
     "    second_difference = discrete_differences(discrete_differences(successive_tape_sizes))\n",
-    "    \n",
+    "    print(successive_tape_sizes)\n",
     "    if len(second_difference) >= number_of_points_to_conclude and \\\n",
     "       only_zeros(second_difference[-1*number_of_points_to_conclude:]):\n",
     "        return True\n",
@@ -160,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "solved-audience",
+   "id": "guided-netherlands",
    "metadata": {},
    "source": [
     "## Test on 1 machine"
@@ -168,29 +167,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "persistent-information",
+   "execution_count": 50,
+   "id": "geological-booking",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 9, 13, 17, 21, 25, 29, 33, 37, 41, 45, 49, 53, 57, 61, 65, 69, 73, 77, 81, 85, 89, 93, 97, 101, 105, 109, 113, 117, 121, 125, 129, 133, 137, 141, 145, 149, 153, 157, 161, 165, 169, 173, 177, 181, 185, 189, 193, 197]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "machine = get_machine_i(DB_PATH, 58329156)\n",
-    "heuristic_bouncer(machine)"
+    "heuristic_bouncers(machine)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "imported-avatar",
+   "id": "pleasant-observer",
    "metadata": {},
    "source": [
     "## Running on all the index of undecided machines"
@@ -199,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "packed-supply",
+   "id": "lesbian-switch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "alone-thompson",
+   "id": "paperback-bleeding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "pending-starter",
+   "id": "controversial-donna",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "speaking-election",
+   "id": "freelance-laundry",
    "metadata": {},
    "outputs": [],
    "source": []
